# whisperrr-py-microservice

./: .gitignore  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  setup-env.sh
.github/workflows/: ci.yml
app/: __init__.py  config.py  exception_handlers.py  exceptions.py  factory.py  job_manager.py  lifespan.py  logging_setup.py  main.py  middleware.py  models.py  utils.py  whisper_service.py
app/api/: __init__.py  dependencies.py
app/application/: __init__.py  transcription_jobs.py
app/routers/: health.py  jobs.py  transcription.py
app/utils/: __init__.py  audio_info.py  ffmpeg_ops.py  files.py  format_detection.py  memory.py  preprocess.py  temp_files.py  validation.py
app/whisper/: __init__.py  compute_selection.py  model_lifecycle.py  progress_mapping.py  response_builder.py  transcription_pipeline.py
tests/: test_api.py  test_job_manager.py  test_utils.py  test_whisper_service.py
