[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperrr-py-microservice"
version = "1.0.0"
description = "FastAPI microservice using Faster Whisper for audio transcription"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1,<0.137",
    "uvicorn[standard]>=0.46.0,<0.47",
    "python-multipart>=0.0.27,<0.0.28",
    "httpx>=0.28.1,<0.29",
    "numpy>=2.4.4,<2.5",
    "faster-whisper>=1.2.1,<1.3",
    "pydantic>=2.13.3,<3",
    "pydantic-settings>=2.14.0,<3",
    "python-dotenv>=1.2.1,<2",
    "psutil>=6.1.1,<7",
    "librosa>=0.11.0,<0.12",
    "soundfile>=0.13.1,<0.14",
    "audioread>=3.1.0,<4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2,<9",
    "pytest-asyncio>=0.26.0,<0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short --strict-markers"
markers = [
    "asyncio: marks tests as async (using pytest-asyncio)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
